--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
-  command = "gatsby build"
-  publish = "public/"
+  command = "NODE_ENV=production gatsby build"
+  publish = "public"
 
 [template]
   incoming-hooks = ["Ghost"]
