--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@tryghost/helpers": "1.1.38",
     "@tryghost/helpers-gatsby": "1.0.43",
     "cheerio": "1.0.0-rc.5",
+    "dotenv": "^8.2.0",
     "gatsby": "^2.32.8",
     "gatsby-awesome-pagination": "0.3.6",
     "gatsby-image": "2.11.0",
@@ -47,17 +48,25 @@
     "gatsby-plugin-catch-links": "2.10.0",
     "gatsby-plugin-feed": "2.13.0",
     "gatsby-plugin-force-trailing-slashes": "1.0.5",
+    "gatsby-plugin-ghost-images": "^1.7.3",
     "gatsby-plugin-google-analytics": "^2.11.0",
     "gatsby-plugin-manifest": "2.12.0",
     "gatsby-plugin-offline": "3.10.0",
     "gatsby-plugin-react-helmet": "3.10.0",
     "gatsby-plugin-sharp": "2.14.1",
+    "gatsby-rehype-ghost-links": "^1.6.6",
+    "gatsby-rehype-inline-images": "^1.9.3",
+    "gatsby-rehype-prismjs": "^1.2.5",
+    "gatsby-source-cloudinary": "^0.1.14",
     "gatsby-source-filesystem": "2.11.0",
     "gatsby-source-ghost": "4.2.3",
+    "gatsby-transformer-cloudinary": "^2.2.3",
+    "gatsby-transformer-rehype": "^1.9.8",
     "gatsby-transformer-sharp": "2.12.0",
     "lodash": "4.17.20",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-helmet": "6.1.0"
+    "react-helmet": "6.1.0",
+    "rehype-prism": "^0.1.1"
   }
 }
