--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "gatsby-plugin-ghost-images": "^1.7.3",
     "gatsby-plugin-google-analytics": "^2.11.0",
     "gatsby-plugin-manifest": "2.12.0",
+    "gatsby-plugin-no-javascript": "^2.0.5",
     "gatsby-plugin-offline": "3.10.0",
     "gatsby-plugin-react-helmet": "3.10.0",
     "gatsby-plugin-sharp": "2.14.1",
