--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "@tryghost/helpers-gatsby": "1.0.43",
     "cheerio": "1.0.0-rc.5",
     "dotenv": "^8.2.0",
-    "gatsby": "^2.32.8",
+    "gatsby": "^2.32.10",
     "gatsby-awesome-pagination": "0.3.6",
     "gatsby-image": "2.11.0",
     "gatsby-plugin-advanced-sitemap": "1.6.0",
@@ -52,7 +52,7 @@
     "gatsby-plugin-google-analytics": "^2.11.0",
     "gatsby-plugin-manifest": "2.12.0",
     "gatsby-plugin-no-javascript": "^2.0.5",
-    "gatsby-plugin-offline": "3.10.0",
+    "gatsby-plugin-offline": "^3.10.2",
     "gatsby-plugin-react-helmet": "3.10.0",
     "gatsby-plugin-sharp": "2.14.1",
     "gatsby-rehype-ghost-links": "^1.6.6",
