--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "gatsby-plugin-catch-links": "2.10.0",
     "gatsby-plugin-feed": "2.13.0",
     "gatsby-plugin-force-trailing-slashes": "1.0.5",
+    "gatsby-plugin-gdpr-cookies": "^1.0.14",
     "gatsby-plugin-ghost-images": "^1.7.3",
     "gatsby-plugin-google-analytics": "^2.11.0",
     "gatsby-plugin-manifest": "2.12.0",
@@ -66,6 +67,7 @@
     "gatsby-transformer-sharp": "2.12.0",
     "lodash": "4.17.20",
     "react": "17.0.1",
+    "react-cookie-consent": "^6.2.3",
     "react-dom": "17.0.1",
     "react-helmet": "6.1.0",
     "rehype-prism": "^0.1.1"
