--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "gatsby-plugin-gdpr-cookies": "^1.0.14",
     "gatsby-plugin-ghost-images": "^1.7.3",
     "gatsby-plugin-google-analytics": "^2.11.0",
+    "gatsby-plugin-google-tagmanager": "^3.0.0",
     "gatsby-plugin-manifest": "2.12.0",
     "gatsby-plugin-no-javascript": "^2.0.5",
     "gatsby-plugin-offline": "^3.10.2",
