--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@tryghost/helpers": "1.1.39",
     "@tryghost/helpers-gatsby": "1.0.44",
     "cheerio": "1.0.0-rc.5",
+    "cookieconsent": "^3.1.1",
     "dotenv": "^8.2.0",
     "gatsby": "^3.0.3",
     "gatsby-awesome-pagination": "0.3.6",
@@ -51,7 +52,6 @@
     "gatsby-plugin-gdpr-cookies": "^1.0.14",
     "gatsby-plugin-ghost-images": "^2.0.0",
     "gatsby-plugin-google-analytics": "^3.0.0",
-    "gatsby-plugin-google-tagmanager": "^3.0.0",
     "gatsby-plugin-manifest": "3.0.0",
     "gatsby-plugin-no-javascript": "^2.0.5",
     "gatsby-plugin-offline": "^4.0.0",
