--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint-plugin-react": "7.22.0"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
     "@tryghost/helpers": "1.1.39",
     "@tryghost/helpers-gatsby": "1.0.44",
     "cheerio": "1.0.0-rc.5",
@@ -53,6 +54,7 @@
     "gatsby-plugin-ghost-images": "^2.0.0",
     "gatsby-plugin-google-analytics": "^3.0.0",
     "gatsby-plugin-manifest": "3.0.0",
+    "gatsby-plugin-material-ui": "^3.0.0",
     "gatsby-plugin-no-javascript": "^2.0.5",
     "gatsby-plugin-offline": "^4.0.0",
     "gatsby-plugin-react-helmet": "4.0.0",
@@ -63,6 +65,7 @@
     "gatsby-source-cloudinary": "^0.1.14",
     "gatsby-source-filesystem": "3.0.0",
     "gatsby-source-ghost": "4.2.3",
+    "gatsby-theme-material-ui": "^1.0.13",
     "gatsby-transformer-cloudinary": "^2.2.3",
     "gatsby-transformer-rehype": "^2.0.0",
     "gatsby-transformer-sharp": "3.0.0",
