--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@material-ui/core": "^4.11.3",
     "@tryghost/helpers": "1.1.39",
     "@tryghost/helpers-gatsby": "1.0.44",
+    "bootstrap": "^4.6.0",
     "cheerio": "1.0.0-rc.5",
     "cookieconsent": "^3.1.1",
     "dotenv": "^8.2.0",
@@ -71,6 +72,7 @@
     "gatsby-transformer-sharp": "3.0.0",
     "lodash": "4.17.21",
     "react": "17.0.1",
+    "react-bootstrap": "^1.5.2",
     "react-cookie-consent": "^6.2.3",
     "react-dom": "17.0.1",
     "react-helmet": "6.1.0",
