--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "gatsby-plugin-gdpr-cookies": "^1.0.14",
     "gatsby-plugin-ghost-images": "^2.0.0",
     "gatsby-plugin-google-analytics": "^3.0.0",
+    "gatsby-plugin-google-gtag": "^3.2.0",
     "gatsby-plugin-manifest": "3.0.0",
     "gatsby-plugin-material-ui": "^3.0.0",
     "gatsby-plugin-no-javascript": "^2.0.5",
