--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@material-ui/core": "^4.11.3",
     "@tryghost/helpers": "1.1.39",
     "@tryghost/helpers-gatsby": "1.0.44",
+    "autoprefixer": "^10.2.5",
     "bootstrap": "^4.6.0",
     "cheerio": "1.0.0-rc.5",
     "cookieconsent": "^3.1.1",
@@ -58,6 +59,7 @@
     "gatsby-plugin-material-ui": "^3.0.0",
     "gatsby-plugin-no-javascript": "^2.0.5",
     "gatsby-plugin-offline": "^4.0.0",
+    "gatsby-plugin-postcss": "^4.3.0",
     "gatsby-plugin-react-helmet": "4.0.0",
     "gatsby-plugin-sharp": "3.0.0",
     "gatsby-rehype-ghost-links": "^2.0.0",
@@ -71,10 +73,12 @@
     "gatsby-transformer-rehype": "^2.0.0",
     "gatsby-transformer-sharp": "3.0.0",
     "lodash": "4.17.21",
+    "postcss": "^8.2.10",
     "react": "17.0.1",
     "react-bootstrap": "^1.5.2",
     "react-dom": "17.0.1",
     "react-helmet": "6.1.0",
-    "rehype-prism": "^0.1.1"
+    "rehype-prism": "^0.1.1",
+    "tailwindcss": "^2.1.1"
   }
 }
