--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "eslint-plugin-react": "7.22.0"
   },
   "dependencies": {
+    "@headlessui/react": "^1.0.0",
+    "@heroicons/react": "^1.0.1",
     "@material-ui/core": "^4.11.3",
     "@tryghost/helpers": "1.1.39",
     "@tryghost/helpers-gatsby": "1.0.44",
