--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "postcss": "^8.2.10",
     "react": "17.0.1",
     "react-bootstrap": "^1.5.2",
+    "react-cookie-consent": "^6.2.3",
     "react-dom": "17.0.1",
     "react-helmet": "6.1.0",
     "rehype-prism": "^0.1.1",
