--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,8 @@
 {
     "redirects": [
         {
-            "trailingSlash": false
+            "trailingSlash": false,
+            "permanent": true
         }
     ]
   }
