--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,7 @@
-     {
-            "trailingSlash": false,
-            "permanent": true
-        }
+    {
+        "redirects": [
+          { "source": "/contact/", "destination": "/contact", "permanent": true },
+          { "trailingSlash": false }
+    
+        ]
+      }
